2013-05-09  Glenn Morris  <rgm@gnu.org>

	* cus-test.el: No need to provide bbdb, bbdb-com any more.
	(cus-test-libs-noloads): Add dunnet in the defvar.
	(dunnet): Don't always load it.
	(viper-mode): Only set if interactive.
	(cus-test-load-custom-loads): Load dunnet if necessary.
	(cus-test-load-1): New macro, with common code from cus-test-load-libs
	and cus-test-libs.
	(cus-test-load-libs, cus-test-libs): Use cus-test-load-1 macro.
	Update for cus-test-get-autoload-deps changed result.
	(cus-test-get-autoload-deps): Simplify.  Return file names as they
	appear in loaddefs.el (directory parts are needed now that not all
	lisp subdirs are in load-path).
	(cus-test-deps): Explicitly skip dunnet.

2013-05-07  Paul Eggert  <eggert@cs.ucla.edu>

	Use Gnulib ACL implementation, for benefit of Solaris etc. (Bug#14295)
	* merge-gnulib (GNULIB_MODULES): Add qacl.
	(GNULIB_TOOL_FLAGS): Do not avoid errno.

2013-04-01  Paul Eggert  <eggert@cs.ucla.edu>

	Use UTF-8 for most files with non-ASCII characters (Bug#13936).
	* notes/unicode (etc/tutorials/TUTORIAL.ko, leim/quail/hanja.el)
	(leim/quail/hanja3.el, leim/quail/symbol-ksc.el):
	Now utf-8, not iso-2022-7bit.  Also, files that contain non-UTF-8
	characters are now encoded in utf-8-emacs, not iso-2022-7bit.

2013-03-18  Paul Eggert  <eggert@cs.ucla.edu>

	* notes/unicode: Mention some more iso-2022-7bit files (Bug#13936).

	Automate the build of ja-dic.el (Bug#13984).
	* notes/unicode: ja-dic.el is now UTF-8.

2013-03-16  Glenn Morris  <rgm@gnu.org>

	* admin.el (manual-pdf, manual-dvi): Pass -I to texi2pdf, texi2dvi.

2013-03-16  Glenn Morris  <rgm@gnu.org>

	* admin.el (manual-html-mono, manual-html-node): Add -DWWW_GNU_ORG.

2013-03-13  Paul Eggert  <eggert@cs.ucla.edu>

	File synchronization fixes (Bug#13944).
	* CPP-DEFINES (BSD_SYSTEM, HAVE_FSYNC): Remove.
	* merge-gnulib (GNULIB_MODULES): Add fsync, fdatasync.

2013-03-11  Paul Eggert  <eggert@cs.ucla.edu>
